# book-catalog

./: CMakeLists.txt
models/Author/: Author.cpp  Author.h
models/Book/: Book.cpp  Book.h
models/BookCatalog/: BookCatalog.cpp  BookCatalog.h
